Add Error Handling code
